--- a/views/custom.handlebars
+++ b/views/custom.handlebars
@@ -32,15 +32,16 @@
 
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">	
     <link href="/css/bootstrap.css" rel="stylesheet">
-	<link href="/css/index.css" rel="stylesheet">
+	<link href="/css/custom.css" rel="stylesheet">
 	
-	<nav class="navbar navbar-toggleable-md navbar-light" id="navigation">
-	  	<div class="container-fluid">
-	  		  <a id="title">flex</a>
-		</div>
-	</nav>
+	<div class="header" id="myHeader">
+	 	<h2 class="container-fluid">
+			<h2>Flex</h2>
+		</h2>
+	</div>
 
 </head>
 
@@ -65,7 +66,7 @@ function cancel() {
 	{{/if}}	
 }
 </script>
-  
+ <h3> Let's Start!</h3>
 <p id="currexercise"><p>
 <p id="currtime"></p>
 
