--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -20,7 +20,7 @@
       rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/info.css" rel="stylesheet">
-
+	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<style>
 	@import url('https://fonts.googleapis.com/css?family=Karla');
 	</style>
@@ -29,7 +29,7 @@
 	 	<h2 class="container-fluid">
 	  	<a href="/library">
 				<i class="material-icons" id = "infoicon" onclick="back()"> chevron_left</i>
-			App Information
+			<h2>App Information</h2>
 			</a>
 		</h2>
 	</div>
