--- a/views/tutorial.handlebars
+++ b/views/tutorial.handlebars
@@ -18,6 +18,7 @@
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
   	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/tutorial.css" rel="stylesheet">
 
