--- a/public/css/index.css
+++ b/public/css/index.css
@@ -89,7 +89,6 @@ a{
     float: right;
     margin-right: 10px;
     margin-top: 5px;
-
 }
 
 .edit-btn{
@@ -114,8 +113,9 @@ a{
 
 #editBtn{
      padding: 5px;
-     color:white;
-     background-color: black;
+     color:#2186F7;
+     background-color: white;
+     font-size: 14px
 }
 
 #navigationBar{  
@@ -212,7 +212,7 @@ a{
 
 body{
      font-family: 'Karla', sans-serif;
-     margin: 30px;
+     margin: 0px;
      background-color: #FCFCFC;
 }
 
@@ -230,10 +230,10 @@ body{
      padding-right: 30px;
 
      font-size: 15px;
-     margin-top: 10px;
 }
 
 li.list-group-item.justify-content-between{
+    margin-bottom: 10px;
     margin: 10px;
   
 }
@@ -305,7 +305,8 @@ li.list-group-item.justify-content-between{
 
 h3{
     font-size:24px;
-    color: #3F4A4F;
+    color: #3F4A4f;
+    margin-left: 15px;
 }
 
 .stats{
@@ -558,10 +559,10 @@ button#dropdownMenuButton.btn.btn-secondary.dropdown-toggle{
     overflow:hidden;
 }
 
-<<<<<<< HEAD
 i.material-icons{
   float: left;
   padding-left: 10px;
+  color: #2186F7;
 }
 
 
@@ -597,8 +598,8 @@ i.material-icons{
 
 i#accnt-icon.material-icons{
     float: right;
+    color: #2186F7;
 }
-=======
 
 /*-----------USER PROFILE------------*/
 .card {
@@ -645,4 +646,133 @@ img {
     display: table;
     clear: both;
 }
->>>>>>> d3ffefbda603ecdfc6fff30e9197b7bf54e5bc10
+
+h1{
+    margin-top: 20px;
+
+}
+
+h2{
+    font-family: 'Space Mono', monospace;
+    font-weight: 900;
+    color: #37474F;
+}
+
+.fbname{
+    font-family: 'Space Mono', monospace;
+    font-size: 2em;
+    color: #2186F7;
+    border: #2186F7 2px solid;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 8px;
+}
+
+/*-----------USER PROFILE------------*/
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    border-radius: 4px; /* 5px rounded corners */
+    transition: 0.3s;
+    max-width: 100%;
+    margin-top: 15px;
+    margin-bottom: 50px;
+}
+
+/* Add some padding inside the card container */
+.container-1 {
+    padding: 2px 16px;
+}
+
+.userbackbtn {
+    margin-top: 20px;
+}
+
+/* Add rounded corners to the top left and the top right corner of the image */
+img {
+    border-radius: 5px 5px 0 0;
+}
+
+/* Create two unequal columns that floats next to each other */
+.column {
+    float: left;
+    padding: 10px;
+}
+
+.left {
+  width: 75%;
+}
+
+.right {
+  width: 25%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+
+
+.card-e {
+    box-shadow: 0 0px 5px 0 rgba(0,0,0,0.2);
+    border-radius: 10px; 
+    transition: 0.3s;
+    max-width: 100%;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.start-button{
+    width: 100%;
+    height: 40px;
+    font-size: 20px;
+    font-weight: 100;
+    color: white;
+    background: linear-gradient(to right, #00BDD6 , #2579FF);
+    border-radius:0px 0px 10px 10px;
+    border: none;
+    letter-spacing: 4px;
+}
+
+.edit-button{
+    width: 60px;
+    height: 38px;
+    font-size: 12px;
+    font-weight: 100;
+ /*   color: #3F4A4F;*/
+    background: white;
+    border: 3px solid #2579FF;
+    float: right;
+
+}
+
+.exerciselist{
+    margin-top: 10px;
+    font-size: 15px;
+    padding-left: 20px;
+    padding-bottom: 10px;
+}
+
+.workout-name{
+    font-size: 24px;
+    font-weight: bold;
+    color: #3F4A4F;
+    padding-left: 20px;
+}
+
+.bulletpoint{
+    color: #fcfcfc;
+}
+
+span.glyphicon.glyphicon-plus::before{
+    color: #2186F7;
+}
+
+button#addbtn.btn.btn-lg{
+    background-color: #fcfcfc;
+}
