--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -16,12 +16,12 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/info.css" rel="stylesheet">
 	<link href="css/index.css" rel="stylesheet">
-
+	
+	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<style>
 		@import url('https://fonts.googleapis.com/css?family=Karla');
 	</style>
@@ -56,7 +56,7 @@
 <body>
 	</form>
 	<div class="card">
-	  <img id="photo" src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_1280.png" alt="Avatar" style="width:100%; max-height: 50%;">
+	  <img class="img-responsive" id="photo" src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_1280.png" alt="Avatar" style="width:100%; max-height: 50%;">
 	  <div class="container-1">
 	    <h1 id="name" style="text-align: center;"><b>Name</b></h1> 
 	  </div>
