--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -57,6 +57,8 @@
 	</br>
 		<div class="exercise-summary">
 		<p class="exercise"> A workout application created with the purpose of seamless exercise, regulated by sound. </p>
+		<center><img src ="images/flex.png" class="img-responsive" id="step-photo" alt="Step 6"></center>
+		<p class="exercise"> Created by Team NAP for COGS 120. </p>
 		</div>
 		<br></br>
 		<a href="/tutorial">
