--- a/views/tutorial.handlebars
+++ b/views/tutorial.handlebars
@@ -58,6 +58,7 @@
 	</br>
 		<div class="exercise-summary">
 		<p class="exercise">Add a workout.</p>
+		<center><img src ="images/11.png" class="img-responsive" id="step-photo" alt="Step 1"></center>
 		<br></br>
 		</div>
 	  </div>
@@ -72,6 +73,7 @@
 	</br>
 		<div class="exercise-summary">
 		<p class="exercise">Edit the workout.</p>
+		<center><img src ="images/22.png" class="img-responsive" id="step-photo" alt="Step 2"></center>
 		<br></br>
 		</div>
 	  </div>
@@ -86,6 +88,7 @@
 	</br>
 		<div class="exercise-summary">
 		<p class="exercise">Add exercises.</p>
+		<center><img src ="images/33.png" class="img-responsive" id="step-photo" alt="Step 3"></center>
 		<br></br>
 		</div>
 	  </div>
@@ -99,7 +102,8 @@
 		</p>
 	</br>
 		<div class="exercise-summary">
-		<p class="exercise">Set a number of repetitions.</p>
+		<p class="exercise">Name the exercises.</p>
+		<center><img src ="images/44.png" class="img-responsive" id="step-photo" alt="Step 4"></center>
 		<br></br>
 		</div>
 	  </div>
@@ -114,6 +118,7 @@
 	</br>
 		<div class="exercise-summary">
 		<p class="exercise">Save the workout.</p>
+		<center><img src ="images/55.png" class="img-responsive" id="step-photo" alt="Step 5"></center>
 		<br></br>
 		</div>
 	  </div>
@@ -128,6 +133,7 @@
 	</br>
 		<div class="exercise-summary">
 		<p class="exercise">Start the workout.</p>
+		<center><img src ="images/66.png" class="img-responsive" id="step-photo" alt="Step 6"></center>
 		<br></br>
 		</div>
 	  </div>
