--- a/public/css/login.css
+++ b/public/css/login.css
@@ -397,7 +397,6 @@ h3{
 input.form-control-lg.name-text-box{
     background-color: #f5f5f5;
     border: 2px solid #f5f5f5;
-    margin-left: 16px;
     height: 40px;
     font-size: 18px;
 }
@@ -480,25 +479,27 @@ label{
 }
 
 button#submit.btn{
-    width: 150px;
+    width: 90%;
     height: 40px;
-    background-color: #651fff;
+    background: linear-gradient(to right, #00BDD6 , #2579FF);
     color: #ffffff;
     border: #651fff 2px solid;  
     font-size: 16px;
-    border-radius: 25px;
+    border: none;
 }
 
 input#usr.form-control{
     font-size: 16px;
     color: #3F4A4F;
     height: 40px;
+    width: 90%;
 }
 
 input#pwd.form-control{
     font-size: 16px;
     color: #3F4A4F;
     height: 40px;
+    width: 90%;
 }
 
 button#dropdownMenuButton.btn.btn-secondary.dropdown-toggle{
@@ -672,8 +673,7 @@ h2{
 .card {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    border-radius: 4px; 
-    border: none;/* 5px rounded corners */
+    border-radius: 4px; /* 5px rounded corners */
     transition: 0.3s;
     max-width: 100%;
     margin-top: 15px;
@@ -690,9 +690,8 @@ h2{
 }
 
 /* Add rounded corners to the top left and the top right corner of the image */
-.card-img {
+img {
     border-radius: 5px 5px 0 0;
-    overflow: hidden;
 }
 
 /* Create two unequal columns that floats next to each other */
@@ -777,4 +776,13 @@ span.glyphicon.glyphicon-plus::before{
 
 button#addbtn.btn.btn-lg{
     background-color: #fcfcfc;
+}
+
+div.container.userlogin{
+    margin: 20px;
+}
+
+div.form-group{
+    margin-left: 25px;
+    margin-top: 15px;
 }
