--- a/public/css/tutorial.css
+++ b/public/css/tutorial.css
@@ -534,7 +534,8 @@ p.exercise{
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  margin: 0;
+  margin-top: -20;
+  margin-bottom: 5px;
   max-width: 100%;
   text-align: center;
 }
@@ -581,10 +582,13 @@ i.material-icons{
 
 /* Add some padding inside the card container */
 div.container-1 {
-    padding-bottom: 20px;
     padding-top: 15px;
     padding-left: 20px;
     padding-right: 20px;
     font-size: 15px;
 }
 
+#step-photo{
+  margin-top: 10px;
+  border: 2px solid #00BCD4;
+}
